vlib/v/checker/tests/invalid_mismatch_for_range_type_err.vv
for _ in map[string]string{} .. `9` {
}
